--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="profile__buttons">
-                    <a download="" href="#" class="button">
+                    <a href="https://drive.google.com/file/d/1lDAH806c2kLeSUV7tEsNPrF7yP2IX_1g/view?usp=sharing" target="_blank" class="button">
                         View Resume <i class="ri-profile-line"></i>
                     </a>
 
@@ -81,7 +81,7 @@
                 
                                     <h3 class="projects__title">CanDIG</h3>
                                     <p class="projects__subtitle">Architectured a data pipeline to tranform clinical trial data to latest data model for cancer research using <b>Python, Pandas</b> and <b>Numpy.</b></p>
-                                    <a href="" class="projects__button button button__small">
+                                    <a href="https://www.distributedgenomics.ca/posts/data-pipelines-candig-approach-and-best-practices/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -95,7 +95,7 @@
                                 <div>
                                     <h3 class="projects__title">Tech+ Portal</h3>
                                     <p class="projects__subtitle">Developed a mentorship portal to connect undergraduate students to upperyear mentors using <b>React, Flask</b> and <b>PostgreSQL.</b></p>
-                                    <a href="https://www.techplusuw.org" class="projects__button button button__small">
+                                    <a href="https://www.techplusuw.org" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -109,7 +109,7 @@
                                 <div>
                                     <h3 class="projects__title">Travel Deck</h3>
                                     <p class="projects__subtitle">Developed a CRUD web application to journal travel experinces using <b>React, Node.js, Express, MongoDB</b> and <b>Redux</b> </p>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://github.com/niharikasrivatsa/travel-deck" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -123,7 +123,7 @@
                                 <div>
                                     <h3 class="projects__title">Felicity The App</h3>
                                     <p class="projects__subtitle">Collabrated with a team to devlop a cross-platform mobile application to support student's mental health by psychological interventions using <b>Dart/Flutter</b> and <b>Firebase</b>.</p>
-                                    <a href="https://www.notion.so/felicitytheapp-08d11cb4916848d68cb12606f1d86a28" class="projects__button button button__small">
+                                    <a href="https://ruby-longship-094.notion.site/felicitytheapp-08d11cb4916848d68cb12606f1d86a28" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -137,7 +137,7 @@
                                 <div>
                                     <h3 class="projects__title">StockMocks</h3>
                                     <p class="projects__subtitle">Developed a web app that allows users to buy and sell stocks in realtime with low-risk using <b>Flask (Python framework), SQLite, HTML, CSS</b> and <b> EJS. </b></p>
-                                    <a href="https://github.com/niharikasrivatsa/stock-mocks" class="projects__button button button__small">
+                                    <a href="https://github.com/niharikasrivatsa/stock-mocks" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                     </a>
@@ -156,7 +156,7 @@
                                 <div>
                                     <h3 class="projects__title">Waterloo Data Science Club</h3>
                                     <p class="projects__subtitle">Pioneered the design of multimedia assets for Instagram and Youtube in <b>Adobe Illustrator, Photoshop</b> and <b>Figma</b></p>
-                                    <a href="https://www.facebook.com/uwdsc/" class="projects__button button button__small">
+                                    <a href="http://waterloodatascience.club/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -170,7 +170,7 @@
                                 <div>
                                     <h3 class="projects__title">Bebaha Virtual Health Care</h3>
                                     <p class="projects__subtitle">Designed mulitimedia assets for social media to advertise the startup and promote telehealth services.</p>
-                                    <a href="https://bebaha.net/" class="projects__button button button__small">
+                                    <a href="https://bebaha.net/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -184,7 +184,7 @@
                                 <div>
                                     <h3 class="projects__title">Project Tech Conference</h3>
                                     <p class="projects__subtitle">Spearhead the production of a podcast on topics  in different fields such as ML, biotechnology, networks, engineering, etc.</p>
-                                    <a href="https://anchor.fm/projecttechconferences" class="projects__button button button__small">
+                                    <a href="https://anchor.fm/projecttechconferences" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
