added personal website project

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <h2 class="profile__name">Niharika Srivatsa</h2>
-                    <h3 class="profile__profession"> 🏫 Systems Design Engineering @ UWaterloo <br/> 👩🏻‍💻 Prev Data Engineer Intern @ UHN <br/> 🍂 Seeking Fall 2022 Internships</h3>
+                    <h3 class="profile__profession"> 🏫 Systems Design Engineering @ UWaterloo <br/> 👩🏻‍💻 Prev Software Developer @ UHN <br/> 🍂 Seeking Fall 2022 Internships</h3>
                     
 
 
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="profile__buttons">
-                    <a href="https://drive.google.com/file/d/1yVtjLiLesIUFSAF0XvTJE7pThWvgUmWs/view?usp=sharing" target="_blank" class="button">
+                    <a href="https://drive.google.com/file/d/14aPPC_19BVacqtlFO1ZNntnfg_FAVAxO/view?usp=sharing" target="_blank" class="button">
                         View Resume <i class="ri-profile-line"></i>
                     </a>
 
@@ -138,6 +138,21 @@
                                     <h3 class="projects__title">StockMocks</h3>
                                     <p class="projects__subtitle">Developed a web app that allows users to buy and sell stocks in realtime with low-risk using <b>Flask (Python framework), SQLite, HTML, CSS</b> and <b> EJS. </b></p>
                                     <a href="https://github.com/niharikasrivatsa/stock-mocks" target="_blank" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
+                            <img src="assets/img/personal-website.png" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <h3 class="projects__title">Personal Website</h3>
+                                    <p class="projects__subtitle">Developed this personal website with a <b>mobile first methodology</b> to showcase my projects and intrests using <b>HTML, CSS/SCSS</b> and <b> Java Script. </b></p>
+                                    <a href="https://github.com/niharikasrivatsa/niharikasrivatsa.github.io" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                     </a>
