--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <h2 class="profile__name">Niharika Srivatsa</h2>
-                    <h3 class="profile__profession"> 🏫 Systems Design Engineering @ UWaterloo <br/> 👩🏻‍💻 Prev Software Developer @ UHN <br/> 🍂 Seeking Fall 2022 Internships</h3>
+                    <h3 class="profile__profession"> 🏫 1B Systems Design Engineering @ UWaterloo <br/> 👩🏻‍💻 Prev Software Developer @ UHN <br/> 🍂 Incoming SWE Intern @ PointClickCare</h3>
                     
 
 
@@ -80,7 +80,7 @@
                                 <div>
                 
                                     <h3 class="projects__title">CanDIG</h3>
-                                    <p class="projects__subtitle">Architectured a data pipeline to tranform clinical trial data to latest data model for cancer research using <b>Python, Pandas</b> and <b>Numpy.</b></p>
+                                    <p class="projects__subtitle">Architectured a data pipeline to transform clinical trial data to latest data model for cancer research using <b>Python, Pandas</b> and <b>Numpy.</b></p>
                                     <a href="https://www.distributedgenomics.ca/posts/data-pipelines-candig-approach-and-best-practices/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
