--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <h2 class="profile__name">Niharika Srivatsa</h2>
-                    <h3 class="profile__profession"> 🏫 2nd Year of Systems Design Engineering @ UWaterloo <br/> 👩🏻‍💻 SWE Intern @ PointClickCare <br/> 🍂 Seeking Summer 2023 Opportunities</h3>
+                    <h3 class="profile__profession"> 🏫 2nd Year Systems Design Engineering Student @ UWaterloo <br/> 👩🏻‍💻 SWE Intern @ PointClickCare <br/> 🍂 Seeking Summer 2023 Opportunities</h3>
                     
 
 
