--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <body>
         <!--=============== HEADER ===============-->
         <header class="profile container">
-            <!-- Theme button -->
-            <i class="ri-moon-line change-theme" id="theme-button"></i>
+            <!-- Theme button
+            <i class="ri-moon-line change-theme" id="theme-button"></i> -->
 
             <div class="profile__container grid">
                 <div class="profile__data">
