--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <h2 class="profile__name">Niharika Srivatsa</h2>
-                    <h3 class="profile__profession"> 🏫 2nd Year Systems Design Engineering Student @ UWaterloo <br/> 👩🏻‍💻 SWE Intern @ PointClickCare <br/> 🍂 Seeking Summer 2023 Opportunities</h3>
+                    <h3 class="profile__profession"> 🏫 Systems Design Engineering Student @ UWaterloo <br/> 👩🏻‍💻 SWE Intern @ PointClickCare <br/> 🍂 Seeking Summer 2023 Opportunities</h3>
                     
 
 
@@ -65,7 +65,7 @@
                         Work
                     </button>
                     <button class="filters__button" data-target="#skills">
-                        Everthing Else
+                        Extracurriculars
                     </button>
                 </ul>
 
