--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="title">about me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/niharika.png" alt="">
+                    <img src="images/niharika.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text"><span class="typing-2"></span></div>
