--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="box">
                         <img src="images/3.png" style="width:250px; height:250px; border-radius: 8px;">
-                        <div class="text">mobile developer</div>
+                        <div class="text">full stack developer</div>
                     </div>
                 </div>
 
