--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img class="logo" src="images/logo.png"><a href="#"></span></a>
             <ul class="menu">
                 <li><a href="#about" class="menu-btn">about</a></li> 
-                <!-- <li><a href="#work" class="menu-btn">work</a></li> -->
+                <li><a href="#work" class="menu-btn">work</a></li>
                 <li><a href="#connect" class="menu-btn">connect</a></li>
                 <li><a href="https://niharikasrivata.substack.com/" class="menu-btn">blog</a></li>
             </ul>
@@ -64,7 +64,7 @@
         </div>
     </section>
     <!-- work section-->
-    <!-- <section class="work" id="work">
+    <section class="work" id="work">
         <div class="max-width">
             <h2 class="title">my work</h2>
             <div class="serv-content">
@@ -167,7 +167,7 @@
                </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- connect section start -->
     <section class="connect" id="connect">
         <div class="max-width">
