--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="particles-js"></div>
-    <!-- <script src="particles.js"></script> -->
+    <script src="particles.js"></script>
     <script src="app.js"></script>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
@@ -64,7 +64,7 @@
         </div>
     </section>
     <!-- work section-->
-    <section class="work" id="work">
+    <!-- <section class="work" id="work">
         <div class="max-width">
             <h2 class="title">my work</h2>
             <div class="serv-content">
@@ -167,7 +167,7 @@
                </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- connect section start -->
     <section class="connect" id="connect">
         <div class="max-width">
