--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
             <img class="logo" src="images/logo.png"><a href="#"></span></a>
             <ul class="menu">
                 <li><a href="#about" class="menu-btn">about</a></li> 
-                <li><a href="#work" class="menu-btn">work</a></li>
                 <li><a href="#connect" class="menu-btn">connect</a></li>
-                <li><a href="https://niharikasrivata.substack.com/" class="menu-btn">blog</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -38,8 +36,8 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, nice to meet you</div>
-                <div class="text-2">I'm <span class="text-2-1">Niharika Srivatsa  </span></div>
+                <div class="text-1">hello, nice to meet you</div>
+                <div class="text-2">i'm <span class="text-2-1">niharika srivatsa</span></div>
                 <div class="text-3"><span class="typing"></span></div>
                 <a href="mailto:nniharik@uwaterloo.ca" target="_blank" class="main-sec">contact for resume</a>
             </div>
@@ -51,14 +49,14 @@
             <h2 class="title">about me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/niharika.jpg" alt="">
+                    <img src="images/niharika3.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text"><span class="typing-2"></span></div>
-                    <p>I'm a third-year student at the <a href="https://uwaterloo.ca/engineering/" target="_blank" rel="noopener" class="uwaterloo-link"><b>University of Waterloo</b></a> studying Systems Design Engineering.
-                        Last summer I interned @ <a href="https://www.tablz.com/" target="_blank" rel="noopener" class="tablz-link">Tablz</a>, an early stage startup working on restaurant booking platform. I've also worked @ <a href="https://pointclickcare.com/" target="_blank" rel="noopener" class="pcc-link">PointClickCare</a> with the Machine Learning Predictions team and @ <a href="https://www.distributedgenomics.ca/" target="_blank" rel="noopener" class="uhn-link"><b>University Health Network</b></a> on ETL pipelines.
-                        <br><br> From building applications for local charities with <a href="https://uwblueprint.org/" target="_blank" rel="noopener" class="blueprint-link"><b>UW Blueprint</b></a> and connecting Waterloo students with mentors through <a href="https://www.techplusuw.com/" target="_blank" rel="noopener" class="techuw-link"><b>Tech+UW</b></a>, I'm always looking to tackle complex problems and empower people.
-                    <br><br> When I'm not collaborating with others on fun projects, you can find me buying $6 coffees, going on bike rides, trying new foods and occasionally picking up a mystery novel.</p>
+                    <p>I'm a third-year student at the <a href="https://uwaterloo.ca/engineering/" target="_blank" rel="noopener" class="uwaterloo-link"><b>University of Waterloo</b></a> studying Systems Design Engineering. I'm currently working at  <a href="https://www.d2l.com/" target="_blank" rel="noopener" class="d2l-link"><b>D2L</b></a> developing monitoring and authentication services!
+                      <br><br>I have previously done 4 internships in both <b>full stack development</b> and <b>data engineering.</b>
+                       From building applications for local charities with <a href="https://uwblueprint.org/" target="_blank" rel="noopener" class="blueprint-link"><b>UW Blueprint</b></a> and connecting Waterloo students with mentors through <a href="https://www.techplusuw.com/" target="_blank" rel="noopener" class="techuw-link"><b>Tech+UW</b></a>, I'm always looking to tackle complex problems and empower people.
+                    <br><br> When I'm not collaborating with others on fun projects, you can find me buying $6 coffees, trying new workouts, exploring the world and occasionally picking up a novel.</p>
                 </div>
             </div>
         </div>
