--- a/index.html
+++ b/index.html
@@ -53,10 +53,27 @@
                 </div>
                 <div class="column right">
                     <div class="text"><span class="typing-2"></span></div>
-                    <p>I'm a third-year student at the <a href="https://uwaterloo.ca/engineering/" target="_blank" rel="noopener" class="uwaterloo-link"><b>University of Waterloo</b></a> studying Systems Design Engineering. I'm currently working at  <a href="https://www.d2l.com/" target="_blank" rel="noopener" class="d2l-link"><b>D2L</b></a> developing monitoring and authentication services!
-                      <br><br>I have previously done 4 internships in both <b>full stack development</b> and <b>data engineering.</b>
-                       From building applications for local charities with <a href="https://uwblueprint.org/" target="_blank" rel="noopener" class="blueprint-link"><b>UW Blueprint</b></a> and connecting Waterloo students with mentors through <a href="https://www.techplusuw.com/" target="_blank" rel="noopener" class="techuw-link"><b>Tech+UW</b></a>, I'm always looking to tackle complex problems and empower people.
-                    <br><br> When I'm not collaborating with others on fun projects, you can find me buying $6 coffees, trying new workouts, exploring the world and occasionally picking up a novel.</p>
+                    <p>
+                        I’m a fourth-year Systems Design Engineering student at the 
+                        <a href="https://uwaterloo.ca/engineering/" target="_blank" rel="noopener" class="uwaterloo-link"><b>University of Waterloo</b></a>, 
+                    
+                        I recently wrapped an internship with 
+                        <a href="https://learn.microsoft.com/en-us/fabric/real-time-intelligence/overview" target="_blank" rel="noopener" class="microsoft-link"><b>Microsoft</b></a>, 
+                        where I developed features for Real Time Intelligence in Microsoft Fabric. 
+                        </p>
+                        <br><br>
+                        <p>Before that, I interned at 
+                        <a href="https://www.d2l.com/" target="_blank" rel="noopener" class="d2l-link"><b>D2L</b></a>, 
+                        <a href="https://www.pointclickcare.com/" target="_blank" rel="noopener" class="pcc-link"><b>PointClickCare</b></a>, 
+                        <a href="https://www.tablz.com/" target="_blank" rel="noopener" class="tablz-link"><b>Tablz</b></a>, 
+                        <a href="https://www.distributedgenomics.ca/#page-top" target="_blank" rel="noopener" class="uhn-link"><b>UHN,</b></a> and 
+                        <a href="https://www.blg.com/" target="_blank" rel="noopener" class="blg-link"><b>BLG</b></a>
+                        working across <b>full-stack development</b>, <b>data engineering</b>, and <b>platform reliability</b>. These experiences gave me the chance to design monitoring and authentication services, optimize pipelines, and ship customer-facing features that improved engagement and reliability.
+                        </p>
+                        <br><br>
+                        <p>
+                        When I'm not collaborating with others on fun projects, you can find me buying $6 coffees, trying new workouts, travelling and picking up a novel.
+                        </p>
                 </div>
             </div>
         </div>
